finished second row

--- a/index.html
+++ b/index.html
@@ -149,32 +149,36 @@
 
                 <!--Shows, Row 2-->
                 <div class="flex justify-evenly">
-                    <div id="red" class="row2Show flex">
-                        <div class="self-end w-full">
+                    <div id="red" class="row2Show flex flex-col justify-center">
+                        <img src="/Images/play2.png" alt="">
+                        <div class="row2Text w-full">
                             <h1>Red Notice</h1>
                             <div class="bar">
                                 <div id="fourth" class="barProgress"></div>
                             </div>
                         </div>
                     </div>
-                    <div id="extraction" class="row2Show flex">
-                        <div class="self-end w-full">
+                    <div id="extraction" class="row2Show flex flex-col justify-center">
+                        <img src="./Images/play2.png" alt="">
+                        <div class="row2Text w-full">
                             <h1>Extraction</h1>
                             <div class="bar">
                                 <div id="half" class="barProgress"></div>
                             </div>
                         </div>
                     </div>
-                    <div id="adam" class="row2Show flex">
-                        <div class="self-end w-full">
+                    <div id="adam" class="row2Show flex flex-col justify-center">
+                        <img src="./Images/play2.png" alt="">
+                        <div class="row2Text w-full">
                             <h1>The Adam Project</h1>
                             <div class="bar">
                                 <div id="ten" class="barProgress"></div>
                             </div>
                         </div>
                     </div>
-                    <div id="guard" class="row2Show flex">
-                        <div class="self-end w-full">
+                    <div id="guard" class="row2Show flex flex-col justify-center">
+                        <img src="./Images/play2.png" alt="">
+                        <div class="row2Text w-full">
                             <h1>The Old Guard</h1>
                             <div class="bar">
                                 <div id="nine" class="barProgress"></div>
