--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
-    <link rel="stylesheet" href="app.css">
-    <link rel="stylesheet" href="style.css">
-
+    
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville&family=Mukta:wght@400;700&display=swap" rel="stylesheet">
+
+    <link rel="stylesheet" href="app.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body class="flex justify-evenly content-center">
     <!--Outside Left Nav-->
@@ -60,38 +61,39 @@
         <!--Inside Right Area-->
         <div class="right">
             <!--Top Bar-->
-            <div class="flex">
-                <!--Arrows-->
-                <div class="arrows flex">
-                    <img src="./Images/back.png" alt="">
-                    <img src="./Images/next.png" alt="">
-                </div>
+            <div class="flex justify-between">
+                <div class="leftSection flex justify-evenly content-center">
+                    <!--Arrows-->
+                    <div class="arrows flex justify-around self-center">
+                        <img src="./Images/back.png" alt="">
+                        <img src="./Images/next.png" alt="">
+                    </div>
 
-                <!--Search Bar-->
-                <div class="search flex">
-                    <img src="./Images/mic.png" alt="">
-                    <h2 class="text-gray">Search...</h2>
+                    <!--Search Bar-->
+                    <div class="search flex">
+                        <img src="./Images/mic.png" alt="">
+                        <h2 class="text-gray">Search...</h2>
+                    </div>
                 </div>
-
                 <!--Right Section-->
-                <div class="rightSection flex">
-                    <img src="./Images/bell.png" alt="">
+                <div class="rightSection flex justify-evenly">
+                    <img class="self-center" id="bell" src="./Images/bell.png" alt="">
                     <!--Profile-->
-                    <div class="profile">
-                        <img src="./Images/pfp.png" alt="">
-                        <div class="flex-col">
+                    <div class="profile flex justify-evenly self-center">
+                        <img class="self-center" src="./Images/pfp.png" alt="">
+                        <div class="flex flex-col self-center">
                             <h3>Samantha G.</h3>
-                            <h4>@Samantha</h4>
+                            <h4 class="opacity-50">@Samantha</h4>
                         </div>
                     </div>
                 </div>
             </div>
 
             <!--Right Main Section-->
-            <div class="flex-col">
+            <div class="flex flex-col">
                 <!--Main Promo-->
-                <div class="mainPromo flex-col">
-                    <div class="text text-center">Peaky <br> Blinders</div>
+                <div class="mainPromo self-center flex flex-col">
+                    <div class="font text text-center">Peaky <br> Blinders</div>
                     <h3>2013 - Drama - 5 Seasons</h3>
                     <div class="buttons flex">
                         <h5>Watch</h5>
