finished, no bugs in local display

--- a/index.html
+++ b/index.html
@@ -92,12 +92,14 @@
             <!--Right Main Section-->
             <div class="flex flex-col">
                 <!--Main Promo-->
-                <div class="mainPromo self-center flex flex-col">
-                    <div class="font text text-center">Peaky <br> Blinders</div>
-                    <h3>2013 - Drama - 5 Seasons</h3>
-                    <div class="buttons flex">
-                        <h5>Watch</h5>
-                        <img src="./Images/plus.png" alt="">
+                <div class="mainPromo flex self-center">
+                    <div class="mainItems flex flex-col self-center">
+                        <div class="font text text-center">Peaky <br> Blinders</div>
+                        <h3 class="self-center">2013 - Drama - 5 Seasons</h3>
+                        <div class="buttons flex justify-around">
+                            <h5>Watch</h5>
+                            <img src="./Images/plus.png" alt="">
+                        </div>
                     </div>
                 </div>
 
